# web2code

./: pyproject.toml  setup.py
.github/: README.md
web2code_wcgb/: evaluate.py  gpt4_vision_evaluation.py  utils.py  vision_evaluation.py
