[project]
name = "Web2Code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "setuptools>=80.1.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "types-requests>=2.32.0.20250328",
    "types-tqdm>=4.67.0.20250516",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
web2code_wcgb = ["py.typed"]
